[gd_scene load_steps=6 format=2]

[ext_resource path="res://inventory_background.jpg" type="Texture" id=1]
[ext_resource path="res://slot.png" type="Texture" id=2]
[ext_resource path="res://slot.gd" type="Script" id=3]
[ext_resource path="res://inventory.gd" type="Script" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 429, 435 )

[node name="inventory" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -97.0
margin_top = 1.0
margin_right = 557.0
margin_bottom = 266.0
texture = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 35.0
margin_top = 18.0
margin_right = 283.0
margin_bottom = 236.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 6

[node name="slot1" type="Panel" parent="GridContainer"]
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot2" type="Panel" parent="GridContainer"]
margin_left = 29.0
margin_right = 54.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot3" type="Panel" parent="GridContainer"]
margin_left = 58.0
margin_right = 83.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot4" type="Panel" parent="GridContainer"]
margin_left = 87.0
margin_right = 112.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot5" type="Panel" parent="GridContainer"]
margin_left = 116.0
margin_right = 141.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot6" type="Panel" parent="GridContainer"]
margin_left = 145.0
margin_right = 170.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot7" type="Panel" parent="GridContainer"]
margin_top = 29.0
margin_right = 25.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot8" type="Panel" parent="GridContainer"]
margin_left = 29.0
margin_top = 29.0
margin_right = 54.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot9" type="Panel" parent="GridContainer"]
margin_left = 58.0
margin_top = 29.0
margin_right = 83.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot10" type="Panel" parent="GridContainer"]
margin_left = 87.0
margin_top = 29.0
margin_right = 112.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot11" type="Panel" parent="GridContainer"]
margin_left = 116.0
margin_top = 29.0
margin_right = 141.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot12" type="Panel" parent="GridContainer"]
margin_left = 145.0
margin_top = 29.0
margin_right = 170.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot13" type="Panel" parent="GridContainer"]
margin_top = 58.0
margin_right = 25.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot14" type="Panel" parent="GridContainer"]
margin_left = 29.0
margin_top = 58.0
margin_right = 54.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot15" type="Panel" parent="GridContainer"]
margin_left = 58.0
margin_top = 58.0
margin_right = 83.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot16" type="Panel" parent="GridContainer"]
margin_left = 87.0
margin_top = 58.0
margin_right = 112.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot17" type="Panel" parent="GridContainer"]
margin_left = 116.0
margin_top = 58.0
margin_right = 141.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot18" type="Panel" parent="GridContainer"]
margin_left = 145.0
margin_top = 58.0
margin_right = 170.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot19" type="Panel" parent="GridContainer"]
margin_top = 87.0
margin_right = 25.0
margin_bottom = 112.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot20" type="Panel" parent="GridContainer"]
margin_left = 29.0
margin_top = 87.0
margin_right = 54.0
margin_bottom = 112.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot21" type="Panel" parent="GridContainer"]
margin_left = 58.0
margin_top = 87.0
margin_right = 83.0
margin_bottom = 112.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot22" type="Panel" parent="GridContainer"]
margin_left = 87.0
margin_top = 87.0
margin_right = 112.0
margin_bottom = 112.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot23" type="Panel" parent="GridContainer"]
margin_left = 116.0
margin_top = 87.0
margin_right = 141.0
margin_bottom = 112.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot24" type="Panel" parent="GridContainer"]
margin_left = 145.0
margin_top = 87.0
margin_right = 170.0
margin_bottom = 112.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot25" type="Panel" parent="GridContainer"]
margin_top = 116.0
margin_right = 25.0
margin_bottom = 141.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot26" type="Panel" parent="GridContainer"]
margin_left = 29.0
margin_top = 116.0
margin_right = 54.0
margin_bottom = 141.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot27" type="Panel" parent="GridContainer"]
margin_left = 58.0
margin_top = 116.0
margin_right = 83.0
margin_bottom = 141.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot28" type="Panel" parent="GridContainer"]
margin_left = 87.0
margin_top = 116.0
margin_right = 112.0
margin_bottom = 141.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot29" type="Panel" parent="GridContainer"]
margin_left = 116.0
margin_top = 116.0
margin_right = 141.0
margin_bottom = 141.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot30" type="Panel" parent="GridContainer"]
margin_left = 145.0
margin_top = 116.0
margin_right = 170.0
margin_bottom = 141.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot31" type="Panel" parent="GridContainer"]
margin_top = 145.0
margin_right = 25.0
margin_bottom = 170.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot32" type="Panel" parent="GridContainer"]
margin_left = 29.0
margin_top = 145.0
margin_right = 54.0
margin_bottom = 170.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot33" type="Panel" parent="GridContainer"]
margin_left = 58.0
margin_top = 145.0
margin_right = 83.0
margin_bottom = 170.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot34" type="Panel" parent="GridContainer"]
margin_left = 87.0
margin_top = 145.0
margin_right = 112.0
margin_bottom = 170.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot35" type="Panel" parent="GridContainer"]
margin_left = 116.0
margin_top = 145.0
margin_right = 141.0
margin_bottom = 170.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot36" type="Panel" parent="GridContainer"]
margin_left = 145.0
margin_top = 145.0
margin_right = 170.0
margin_bottom = 170.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot37" type="Panel" parent="GridContainer"]
margin_top = 174.0
margin_right = 25.0
margin_bottom = 199.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot38" type="Panel" parent="GridContainer"]
margin_left = 29.0
margin_top = 174.0
margin_right = 54.0
margin_bottom = 199.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot39" type="Panel" parent="GridContainer"]
margin_left = 58.0
margin_top = 174.0
margin_right = 83.0
margin_bottom = 199.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot40" type="Panel" parent="GridContainer"]
margin_left = 87.0
margin_top = 174.0
margin_right = 112.0
margin_bottom = 199.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot41" type="Panel" parent="GridContainer"]
margin_left = 116.0
margin_top = 174.0
margin_right = 141.0
margin_bottom = 199.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot42" type="Panel" parent="GridContainer"]
margin_left = 145.0
margin_top = 174.0
margin_right = 170.0
margin_bottom = 199.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot43" type="Panel" parent="GridContainer"]
margin_top = 203.0
margin_right = 25.0
margin_bottom = 228.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot44" type="Panel" parent="GridContainer"]
margin_left = 29.0
margin_top = 203.0
margin_right = 54.0
margin_bottom = 228.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot45" type="Panel" parent="GridContainer"]
margin_left = 58.0
margin_top = 203.0
margin_right = 83.0
margin_bottom = 228.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot46" type="Panel" parent="GridContainer"]
margin_left = 87.0
margin_top = 203.0
margin_right = 112.0
margin_bottom = 228.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot47" type="Panel" parent="GridContainer"]
margin_left = 116.0
margin_top = 203.0
margin_right = 141.0
margin_bottom = 228.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot48" type="Panel" parent="GridContainer"]
margin_left = 145.0
margin_top = 203.0
margin_right = 170.0
margin_bottom = 228.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Craft" type="GridContainer" parent="."]
margin_left = 271.0
margin_top = 49.0
margin_right = 305.0
margin_bottom = 168.0
custom_constants/vseparation = 20
custom_constants/hseparation = 4

[node name="slot1" type="Panel" parent="Craft"]
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot2" type="Panel" parent="Craft"]
margin_top = 45.0
margin_right = 25.0
margin_bottom = 70.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="slot3" type="Panel" parent="Craft"]
margin_top = 90.0
margin_right = 25.0
margin_bottom = 115.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="craft" type="Panel" parent="Craft"]
margin_top = 135.0
margin_right = 25.0
margin_bottom = 160.0
rect_min_size = Vector2( 25, 25 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
